--- a/l3experimental/l3graphics/l3graphics.dtx
+++ b/l3experimental/l3graphics/l3graphics.dtx
@@ -573,7 +573,7 @@
         \exp_args:Ne \str_tail:n
           { \str_fold_case:V \l_@@_ext_str }
       }
-    \exp_args:Nx \@@_include:n
+    \exp_args:Nx \@@_include_auxi:n
       { \str_tail:N \l_@@_ext_str }
   }
 \cs_new_protected:Npn \graphics_include:nn #1#2
