--- a/l3experimental/l3graphics/l3graphics.dtx
+++ b/l3experimental/l3graphics/l3graphics.dtx
@@ -398,7 +398,7 @@
   {
     #1
     \exp_not:N \ior_if_eof:NTF \exp_not:N \l_@@_tmp_ior
-      { \__kernel_msg_error:nnn { image } {#2} {#3} }
+      { \__kernel_msg_error:nnn { graphics } {#2} {#3} }
       {
         \ior_str_map_inline:Nn \exp_not:N \l_@@_tmp_ior
           {
@@ -562,7 +562,7 @@
           { \seq_map_break:n { \use_i:nnn \@@_include: } }
       }
     \use:n
-      { \__kernel_msg_error:nnn { image } { image-not-found } {#1} }
+      { \__kernel_msg_error:nnn { graphics } { image-not-found } {#1} }
   }
 \cs_new_protected:Npn \@@_include:
   {
@@ -583,7 +583,7 @@
           \exp_args:Ne \@@_include_auxi:n
             { \str_fold_case:n {#1} }
         }
-        { \__kernel_msg_error:nnn { image } { image-not-found } {#1} }
+        { \__kernel_msg_error:nnn { graphics } { image-not-found } {#1} }
     \group_end:
   }
 \cs_new_protected:Npn \@@_include_auxi:n #1
@@ -609,7 +609,7 @@
           { \@@_include_auxiv:n }
             {#1}
       }
-      { \__kernel_msg_error:nnn { image } { unsupported-image-type } {#1} }
+      { \__kernel_msg_error:nnn { graphics } { unsupported-image-type } {#1} }
   }
 \cs_new_protected:Npn \@@_include_auxiii:n #1
   {
@@ -680,19 +680,19 @@
 % \subsection{Messages}
 %
 %    \begin{macrocode}
-\__kernel_msg_new:nnnn { image } { image-not-found }
+\__kernel_msg_new:nnnn { graphics } { image-not-found }
   { Image~file~'#1'~not~found. }
   {
     LaTeX~tried~to~open~image~file~'#1',
     ~but~the~file~could~not~be~read.
   }
-\__kernel_msg_new:nnnn { image } { pipe-failed }
+\__kernel_msg_new:nnnn { graphics } { pipe-failed }
   { Cannot~run~piped~system~commands. }
   {
     LaTeX~tried~to~call~a~system~process~but~this~was~not~possible.\\
     Try~the~"--shell-escape"~(or~"--enable-pipes")~option.
   }
-\__kernel_msg_new:nnnn { image } { unsupported-image-type }
+\__kernel_msg_new:nnnn { graphics } { unsupported-image-type }
   { Image~type~'#1'~not~supported~by~current~driver. }
   {
     LaTeX~was~asked~to~include~an~image~of~type~'#1',~
