Ensure color values are well-formed
Leading zeros should be present.

--- a/l3experimental/l3color/l3color.dtx
+++ b/l3experimental/l3color/l3color.dtx
@@ -633,19 +633,40 @@
 % \end{macro}
 %
 % \begin{macro}[EXP]
-%   {\@@_parse_gray:w, \@@_parse_rgb:w, \@@_parse_cmyk:w, \@@_parse_spot:w}
+%   {
+%     \@@_parse_model_gray:w, \@@_parse_model_rgb:w,
+%     \@@_parse_model_cmyk:w, \@@_parse_model_spot:w
+%   }
+% \begin{macro}[EXP]{\@@_parse_number:n}
+% \begin{macro}[EXP]{\@@_parse_number:w}
 % \begin{macro}[EXP]{\@@_parse_spot_aux:w}
-%   Turn the input into internal form.
+%   Turn the input into internal form, also tidying up the number quickly.
 %    \begin{macrocode}
-\cs_new:Npn \@@_parse_gray:w #1 , #2 \q_stop {#1}
-\cs_new:Npn \@@_parse_rgb:w #1 , #2 , #3 , #4 \q_stop { #1 ~ #2 ~ #3 }
-\cs_new:Npn \@@_parse_cmyk:w #1 , #2 , #3 , #4 , #5 \q_stop
-  { #1 ~ #2 ~ #3 ~ #4 }
-\cs_new:Npn \@@_parse_spot:w #1 , #2 \q_stop
+\cs_new:Npn \@@_parse_model_gray:w #1 , #2 \q_stop { \@@_parse_number:n {#1} }
+\cs_new:Npn \@@_parse_model_rgb:w #1 , #2 , #3 , #4 \q_stop
+  {
+    \@@_parse_number:n {#1} ~ 
+    \@@_parse_number:n {#2} ~
+    \@@_parse_number:n {#3}
+  }
+\cs_new:Npn \@@_parse_model_cmyk:w #1 , #2 , #3 , #4 , #5 \q_stop
+  {
+    \@@_parse_number:n {#1} ~ 
+    \@@_parse_number:n {#2} ~
+    \@@_parse_number:n {#3} ~
+    \@@_parse_number:n {#4}
+  }
+\cs_new:Npn \@@_parse_model_spot:w #1 , #2 \q_stop
   { \@@_parse_spot_aux:w #1 ! 100 ! \q_stop }
 \cs_new:Npn \@@_parse_spot_aux:w #1 ! #2 ! #3 \q_stop
   { #1 ~ \fp_eval:n { #2 / 100 } }
+\cs_new:Npn \@@_parse_number:n #1
+  {  \@@_parse_number:w #1 . 0 . \q_stop }
+\cs_new:Npn \@@_parse_number:w #1 . #2 . #3 \q_stop
+  { \tl_if_blank:nTF {#1} { 0 } {#1} . #2 }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 %
@@ -725,10 +746,10 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_direct:nnN #1#2#3
   {
-    \cs_if_exist:cTF { @@_parse_ #1 :w }
+    \cs_if_exist:cTF { @@_parse_model_ #1 :w }
       {
         \tl_set:Nx #3
-          { #1 ~ \use:c {  @@_parse_ #1 :w } #2 , 0 , 0 , 0 , 0 \q_stop }
+          { #1 ~ \use:c {  @@_parse_model_ #1 :w } #2 , 0 , 0 , 0 , 0 \q_stop }
         \@@_check_model:N #3
       }
       {
