--- a/l3kernel/l3drivers-color.dtx
+++ b/l3kernel/l3drivers-color.dtx
@@ -269,7 +269,7 @@
 \cs_new_protected:Npn \@@_color_rgb:nnn #1#2#3
   { \@@_color_select:n { #1 ~ #2 ~ #3 ~ rg ~ #1 ~ #2 ~ #3 ~ RG } }
 \cs_new_protected:Npn \driver_color_spot:nn #1#2
-  { \@@_color_select:n { /#1 ~ cs ~ /#1 ~ CS ~ #2 ~ sc ~ #2 ~ SC } }
+  { \@@_color_select:n { /&#1 ~ cs ~ /&#1 ~ CS ~ #2 ~ sc ~ #2 ~ SC } }
 \cs_new_protected:Npx \@@_color_select:n #1
   {
     \cs_if_exist:NTF \tex_pdfextension:D
