Missing \scan_stop: (fixes #577)

--- a/l3experimental/l3benchmark/l3benchmark.dtx
+++ b/l3experimental/l3benchmark/l3benchmark.dtx
@@ -154,7 +154,7 @@
     \cs_if_exist:NT \tex_elapsedtime:D
       {
         \cs_new:Npn \sys_timer:
-          { \int_eval:w \tex_elapsedtime:D }
+          { \int_eval:w \tex_elapsedtime:D \scan_stop: }
       }
   }
 \@@_const:nn { sys_if_timer_exist }
