Simplify \sys_timer: in l3benchmark (see #577)
Contrarily to Heiko Oberdiek's pdftexcmds where he made the LuaTeX
emulation look like an internal integer using \numexpr...\relax,
here we want an integer denotation (simply decimal digits), which is
precisely what l3kernel.elapsedtime() provides.

--- a/l3experimental/l3benchmark/l3benchmark.dtx
+++ b/l3experimental/l3benchmark/l3benchmark.dtx
@@ -148,13 +148,13 @@
 \sys_if_engine_luatex:TF
   {
     \cs_new:Npn \sys_timer:
-      { \int_eval:w \lua_now:n { l3kernel.elapsedtime() } \scan_stop: }
+      { \lua_now:n { l3kernel.elapsedtime() } }
   }
   {
     \cs_if_exist:NT \tex_elapsedtime:D
       {
         \cs_new:Npn \sys_timer:
-          { \int_eval:w \tex_elapsedtime:D \scan_stop: }
+          { \int_value:w \tex_elapsedtime:D }
       }
   }
 \@@_const:nn { sys_if_timer_exist }
