Document that LuaTeX's clock only measures CPU time and not real time

--- a/l3experimental/l3benchmark/l3benchmark.dtx
+++ b/l3experimental/l3benchmark/l3benchmark.dtx
@@ -66,8 +66,10 @@
 %     \cs{sys_timer:}
 %   \end{syntax}
 %   Expands to the current value of the engine's timer clock, a
-%   non-negative integer.  In engines without clock support this
-%   expands to $0$.
+%   non-negative integer.  In engines without clock support this expands
+%   to $0$ after an error.  In \LuaTeX{} only the CPU time is measured,
+%   while in other engines real time is measured (including time waiting
+%   for user input).
 % \end{function}
 %
 % \section{Benchmark}
