--- a/l3kernel/l3fp-parse.dtx
+++ b/l3kernel/l3fp-parse.dtx
@@ -2291,22 +2291,19 @@
     #1
     #2
   }
-\cs_new:Npx \@@_parse_infix_check:NNN #1#2#3
+\cs_new:Npn \@@_parse_infix_check:NNN #1#2#3
   {
-    \exp_not:N \if_meaning:w \scan_stop: #1
-      \exp_not:N \__kernel_msg_expandable_error:nnn
+    \if_meaning:w \scan_stop: #1
+      \__kernel_msg_expandable_error:nnn
         { kernel } { fp-missing } { * }
-      \exp_not:N \exp_after:wN
-      \exp_not:c { @@_parse_infix_*:N }
-      \exp_not:N \exp_after:wN #2
-      \exp_not:N \exp_after:wN #3
-    \exp_not:N \else:
-      \exp_not:N \exp_after:wN #1
-      \exp_not:N \exp_after:wN #2
-      \exp_not:N \exp:w
-      \exp_not:N \exp_after:wN
-      \exp_not:N \@@_parse_expand:w
-    \exp_not:N \fi:
+      \exp_after:wN \@@_parse_infix_mul:N
+      \exp_after:wN #2
+      \exp_after:wN #3
+    \else:
+      \exp_after:wN #1
+      \exp_after:wN #2
+      \exp:w \exp_after:wN \@@_parse_expand:w
+    \fi:
   }
 %    \end{macrocode}
 % \end{macro}
