Yet more s/image/graphic/

--- a/l3experimental/l3graphics/l3graphics.dtx
+++ b/l3experimental/l3graphics/l3graphics.dtx
@@ -56,22 +56,22 @@
 %
 % \subsection{Driver functions}
 %
-% Inclusion of image files requires a range of low-level data be passed to
+% Inclusion of graphic files requires a range of low-level data be passed to
 % the driver layer. These functions are primarily aimed at supporting this
 % work.
 %
 % \begin{variable}{\l_graphics_decodearray_tl}
-%   Array to decode color in bitmap image: when non-empty, this should
+%   Array to decode color in bitmap graphic: when non-empty, this should
 %   be in the form of one, two or three pairs of real numbers in the range
 %   $[0,1]$, separated by spaces.
 % \end{variable}
 %
 % \begin{variable}{\l_graphics_interpolate_bool}
-%   Indicates whether interpolation should be applied to bitmap image files.
+%   Indicates whether interpolation should be applied to bitmap graphic files.
 % \end{variable}
 %
 % \begin{variable}{\l_graphics_page_int}
-%   The page to extract from a multi-page image file: used for |.pdf| files
+%   The page to extract from a multi-page graphic file: used for |.pdf| files
 %   which may contain multiple pages.
 % \end{variable}
 %
@@ -82,14 +82,14 @@
 % \end{variable}
 %
 % \begin{variable}{\l_graphics_draft_bool}
-%   Switch to enable draft mode: images are read but not included when this is
+%   Switch to enable draft mode: graphics are read but not included when this is
 %   true.
 % \end{variable}
 %
 % \begin{variable}
 %   {\l_graphics_llx_dim, \l_graphics_lly_dim, \l_graphics_urx_dim, \l_graphics_ury_dim}
 %   Dimensions which return the points $(\meta{llx},\meta{lly})$ and
-%   $(\meta{urx},\meta{ury})$ for the image. For many images only the resulting
+%   $(\meta{urx},\meta{ury})$ for the graphic. For many graphics only the resulting
 %   height and width are significant, but this is driver-dependent.
 % \end{variable}
 %
@@ -104,16 +104,16 @@
 %     \graphics_bb_restore:nF, \graphics_bb_restore:xF
 %   }
 %   \begin{syntax}
-%     \cs{image_bb_save:n} \Arg{image}
-%     \cs{image_bb_restore:nF} \Arg{image} \Arg{false code}
+%     \cs{graphic_bb_save:n} \Arg{graphic}
+%     \cs{graphic_bb_restore:nF} \Arg{graphic} \Arg{false code}
 %   \end{syntax}
-%   This pair of functions are used to cache the bounding box of an \meta{image}
+%   This pair of functions are used to cache the bounding box of an \meta{graphic}
 %   so that extraction/reading is only required once. The \texttt{save}
 %   function stores the values from \cs{l_graphics_llx_dim},
 %   \cs{l_graphics_lly_dim}, \cs{l_graphics_urx_dim} and
 %   \cs{l_graphics_ury_dim} as constants. The \texttt{restore} function will then
-%   look up values for the bounding box of an \meta{image} and set the four
-%   dimensions appropriately. For any one \meta{image} the bounding box will
+%   look up values for the bounding box of an \meta{graphic} and set the four
+%   dimensions appropriately. For any one \meta{graphic} the bounding box will
 %   be constant, so the \texttt{save} function should only be called once. Thus
 %   a typical use case is
 %   \begin{verbatim}
@@ -126,16 +126,16 @@
 %   \emph{i.e.}~every use of a bounding box will attempt to restore saved data,
 %   and saving will only take place where that is not possible.
 %   
-%   Note that the \meta{image} may not be a simple file name: a multi-page PDF,
+%   Note that the \meta{graphic} may not be a simple file name: a multi-page PDF,
 %   for example, will need to have the bounding box cached for each page used.
 % \end{function}
 %
 % \begin{function}{\graphics_extract_bb:n}
 %   \begin{syntax}
-%     \cs{image_extract_bb:n} \Arg{file}
+%     \cs{graphic_extract_bb:n} \Arg{file}
 %   \end{syntax}
-%   Extracts bounding box data for the image \meta{file} using the |extractbb|
-%   utility, and stores the bounding box of the image file in
+%   Extracts bounding box data for the graphic \meta{file} using the |extractbb|
+%   utility, and stores the bounding box of the graphic file in
 %   \cs{l_graphics_llx_dim}, \cs{l_graphics_lly_dim}, \cs{l_graphics_urx_dim} and
 %   \cs{l_graphics_ury_dim}.
 %
@@ -146,7 +146,7 @@
 %   |.jpg| are appropriate for parsing using this function.
 %
 %   When \cs{l_graphics_page_int} is positive the appropriate page will be
-%   queried from the image file.
+%   queried from the graphic file.
 %
 %   Note that this function requires pipe shell calls to be enabled: this is
 %   generally true but may require the option |--enable-pipes| to be enabled
@@ -155,9 +155,9 @@
 %
 % \begin{function}{\graphics_read_bb:n}
 %   \begin{syntax}
-%     \cs{image_read_bb:n} \Arg{file}
+%     \cs{graphic_read_bb:n} \Arg{file}
 %   \end{syntax}
-%   Parses the image \meta{file} to find a PostScript-style bounding box
+%   Parses the graphic \meta{file} to find a PostScript-style bounding box
 %   line of the form
 %   \begin{verbatim}
 %   %%BoundingBox: llx lly urx urx
@@ -176,17 +176,17 @@
 %
 % \begin{function}{\graphics_include:n, \graphics_include:nn}
 %   \begin{syntax}
-%     \cs{image_include:n} \Arg{file}
-%     \cs{image_include:nn} \Arg{file} \Arg{type}
+%     \cs{graphic_include:n} \Arg{file}
+%     \cs{graphic_include:nn} \Arg{file} \Arg{type}
 %   \end{syntax}
-%   Horizontal-mode commands which include the \meta{file} as an image
+%   Horizontal-mode commands which include the \meta{file} as an graphic
 %   at the current location. The file \meta{type} is given explicitly in
 %   the two-argument version, or is inferred from the file extension extracted
-%   in the single-argument form. The exact image types supported depend upon
+%   in the single-argument form. The exact graphic types supported depend upon
 %   the driver in use.
 %
 %   Where the \meta{file} is not found and the \meta{type} is \emph{not}
-%   given, a search for possible image files is undertaken using the extensions
+%   given, a search for possible graphic files is undertaken using the extensions
 %   stored in \cs{l_graphics_search_ext_seq}.
 % \end{function}
 %
@@ -201,13 +201,13 @@
 % \end{variable}
 %
 % \begin{variable}{\l_graphics_search_ext_seq}
-%   Extensions to use for image searching when the given \meta{file} name is not
-%   found by \cs{image_include:n}.
+%   Extensions to use for graphic searching when the given \meta{file} name is not
+%   found by \cs{graphic_include:n}.
 % \end{variable}
 %
 % \begin{variable}{\l_graphics_search_path_seq}
 %   Each entry is the path to a directory which should be searched when
-%   seeking an image file. Each path can be relative or absolute, and should
+%   seeking an graphic file. Each path can be relative or absolute, and should
 %   not include the trailing slash. The entries are not expanded when
 %   used so may contain active characters but should not feature any
 %   variable content. Spaces need not be quoted.
@@ -215,14 +215,14 @@
 %
 % \begin{function}{\graphics_show_list:, \graphics_log_list:}
 %   \begin{syntax}
-%     \cs{image_show_list:}
-%     \cs{image_log_list:}
+%     \cs{graphic_show_list:}
+%     \cs{graphic_log_list:}
 %   \end{syntax}
-%   These functions list all image files loaded by in a similar manner to
+%   These functions list all graphic files loaded by in a similar manner to
 %   \cs{file_show_list:} and \cs{file_log_list:}. While
-%   \cs{image_show_list:} displays the list in the terminal,
-%   \cs{image_log_list:} outputs it to the log file only. In both cases, only
-%   images loaded by \pkg{l3graphics} are listed.
+%   \cs{graphic_show_list:} displays the list in the terminal,
+%   \cs{graphic_log_list:} outputs it to the log file only. In both cases, only
+%   graphics loaded by \pkg{l3graphics} are listed.
 % \end{function}
 %
 % \end{documentation}
@@ -263,7 +263,7 @@
 %     \l_graphics_page_int        ,
 %     \l_graphics_pagebox_tl
 %   }
-%   Keys which control features of images. The standard value of |pagebox|
+%   Keys which control features of graphics. The standard value of |pagebox|
 %   set up here should match the default for the drivers themselves: in
 %   the absence of any other setting the |cropbox| should be used.
 %    \begin{macrocode}
@@ -293,7 +293,7 @@
 %
 % \begin{macro}{\graphics_bb_save:n, \graphics_bb_save:x}
 % \begin{macro}{\graphics_bb_restore:nF, \graphics_bb_restore:xF}
-%   Caching image bounding boxes is sensible, and these functions are needed both
+%   Caching graphic bounding boxes is sensible, and these functions are needed both
 %   here and for drive-specific work. So they are made available as documented
 %   functions. To save on registers, the \enquote{origin} is only saved if it is
 %   not at zero.
@@ -301,7 +301,7 @@
 \cs_new_protected:Npn \graphics_bb_save:n #1
   {
     \dim_if_exist:cTF { c_@@_ #1 _urx_dim }
-      { \__kernel_msg_error:nnn { image } { bb-already-cached } {#1} }
+      { \__kernel_msg_error:nnn { graphic } { bb-already-cached } {#1} }
       {
         \dim_compare:nNnF \l_graphics_llx_dim = { 0pt }
           { \dim_const:cn { c_@@_ #1 _llx_dim } { \l_graphics_llx_dim } }
@@ -381,11 +381,11 @@
   {
     \@@_read_bb_auxi:nnnn {#1} { }
       { \ior_open:Nn \l_@@_tmp_ior {#1} }
-      { image-not-found }
+      { graphic-not-found }
   }
 %   \end{macrocode}
 %  Before any real searching, a check to see if there are cached values
-%  available. The name of each image will be unique and so it's sensible to
+%  available. The name of each graphic will be unique and so it's sensible to
 %  store the bounding box data in \TeX{}: this avoids multiple file operations.
 %  As bounding boxes here start away from the lower-left origin, we need to
 %  store all four values (contrast with for example the \texttt{pdfmode}
@@ -525,7 +525,7 @@
 % \end{variable}
 %
 % \begin{variable}{\g_@@_record_seq}
-%   A list of image files used.
+%   A list of graphic files used.
 %    \begin{macrocode}
 \seq_new:N \g_@@_record_seq
 %    \end{macrocode}
@@ -540,7 +540,7 @@
 %     \@@_include_auxi:n, \@@_include_auxii:n,
 %     \@@_include_auxiii:n, \@@_include_auxiv:n
 %   }
-%   Actually including an image is relatively straight-forward: most of the
+%   Actually including an graphic is relatively straight-forward: most of the
 %   work is done by the driver. We only have to deal with making sure the
 %   box has no apparent depth. Where the first given name is not found, we
 %   search based on extension only if the \meta{type} was not given. The one
@@ -568,7 +568,7 @@
           { \seq_map_break:n { \use_i:nnn \@@_include: } }
       }
     \use:n
-      { \__kernel_msg_error:nnn { graphics } { image-not-found } {#1} }
+      { \__kernel_msg_error:nnn { graphics } { graphic-not-found } {#1} }
   }
 \cs_new_protected:Npn \@@_include:
   {
@@ -589,7 +589,7 @@
           \exp_args:Ne \@@_include_auxi:n
             { \str_fold_case:n {#1} }
         }
-        { \__kernel_msg_error:nnn { graphics } { image-not-found } {#1} }
+        { \__kernel_msg_error:nnn { graphics } { graphic-not-found } {#1} }
     \group_end:
   }
 \cs_new_protected:Npn \@@_include_auxi:n #1
@@ -616,7 +616,7 @@
           { \@@_include_auxiv:n }
             {#1}
       }
-      { \__kernel_msg_error:nnn { graphics } { unsupported-image-type } {#1} }
+      { \__kernel_msg_error:nnn { graphics } { unsupported-graphic-type } {#1} }
   }
 \cs_new_protected:Npn \@@_include_auxiii:n #1
   {
@@ -668,7 +668,7 @@
 %
 % \begin{macro}{\graphics_show_list:, \graphics_log_list:, \@@_list:N}
 % \begin{macro}[EXP]{\@@_list_aux:n}
-%   A function to list all image files used.
+%   A function to list all graphic files used.
 %    \begin{macrocode}
 \cs_new_protected:Npn \graphics_show_list: { \@@_list:N \msg_show:nnxxxx }
 \cs_new_protected:Npn \graphics_log_list: { \@@_list:N \msg_log:nnxxxx }
@@ -687,10 +687,10 @@
 % \subsection{Messages}
 %
 %    \begin{macrocode}
-\__kernel_msg_new:nnnn { graphics } { image-not-found }
+\__kernel_msg_new:nnnn { graphics } { graphic-not-found }
   { Image~file~'#1'~not~found. }
   {
-    LaTeX~tried~to~open~image~file~'#1',
+    LaTeX~tried~to~open~graphic~file~'#1',
     ~but~the~file~could~not~be~read.
   }
 \__kernel_msg_new:nnnn { graphics } { pipe-failed }
@@ -699,10 +699,10 @@
     LaTeX~tried~to~call~a~system~process~but~this~was~not~possible.\\
     Try~the~"--shell-escape"~(or~"--enable-pipes")~option.
   }
-\__kernel_msg_new:nnnn { graphics } { unsupported-image-type }
+\__kernel_msg_new:nnnn { graphics } { unsupported-graphic-type }
   { Image~type~'#1'~not~supported~by~current~driver. }
   {
-    LaTeX~was~asked~to~include~an~image~of~type~'#1',~
+    LaTeX~was~asked~to~include~an~graphic~of~type~'#1',~
     but~this~is~not~supported~by~the~current~driver~(production~route).
   }
 %    \end{macrocode}
