--- a/l3experimental/l3graphics/l3graphics.dtx
+++ b/l3experimental/l3graphics/l3graphics.dtx
@@ -104,8 +104,8 @@
 %     \graphics_bb_restore:nF, \graphics_bb_restore:xF
 %   }
 %   \begin{syntax}
-%     \cs{graphic_bb_save:n} \Arg{graphic}
-%     \cs{graphic_bb_restore:nF} \Arg{graphic} \Arg{false code}
+%     \cs{graphics_bb_save:n} \Arg{graphic}
+%     \cs{graphics_bb_restore:nF} \Arg{graphic} \Arg{false code}
 %   \end{syntax}
 %   This pair of functions are used to cache the bounding box of an \meta{graphic}
 %   so that extraction/reading is only required once. The \texttt{save}
@@ -132,7 +132,7 @@
 %
 % \begin{function}{\graphics_extract_bb:n}
 %   \begin{syntax}
-%     \cs{graphic_extract_bb:n} \Arg{file}
+%     \cs{graphics_extract_bb:n} \Arg{file}
 %   \end{syntax}
 %   Extracts bounding box data for the graphic \meta{file} using the |extractbb|
 %   utility, and stores the bounding box of the graphic file in
@@ -155,7 +155,7 @@
 %
 % \begin{function}{\graphics_read_bb:n}
 %   \begin{syntax}
-%     \cs{graphic_read_bb:n} \Arg{file}
+%     \cs{graphics_read_bb:n} \Arg{file}
 %   \end{syntax}
 %   Parses the graphic \meta{file} to find a PostScript-style bounding box
 %   line of the form
@@ -176,8 +176,8 @@
 %
 % \begin{function}{\graphics_include:n, \graphics_include:nn}
 %   \begin{syntax}
-%     \cs{graphic_include:n} \Arg{file}
-%     \cs{graphic_include:nn} \Arg{file} \Arg{type}
+%     \cs{graphics_include:n} \Arg{file}
+%     \cs{graphics_include:nn} \Arg{file} \Arg{type}
 %   \end{syntax}
 %   Horizontal-mode commands which include the \meta{file} as an graphic
 %   at the current location. The file \meta{type} is given explicitly in
@@ -202,7 +202,7 @@
 %
 % \begin{variable}{\l_graphics_search_ext_seq}
 %   Extensions to use for graphic searching when the given \meta{file} name is not
-%   found by \cs{graphic_include:n}.
+%   found by \cs{graphics_include:n}.
 % \end{variable}
 %
 % \begin{variable}{\l_graphics_search_path_seq}
@@ -215,13 +215,13 @@
 %
 % \begin{function}{\graphics_show_list:, \graphics_log_list:}
 %   \begin{syntax}
-%     \cs{graphic_show_list:}
-%     \cs{graphic_log_list:}
+%     \cs{graphics_show_list:}
+%     \cs{graphics_log_list:}
 %   \end{syntax}
 %   These functions list all graphic files loaded by in a similar manner to
 %   \cs{file_show_list:} and \cs{file_log_list:}. While
-%   \cs{graphic_show_list:} displays the list in the terminal,
-%   \cs{graphic_log_list:} outputs it to the log file only. In both cases, only
+%   \cs{graphics_show_list:} displays the list in the terminal,
+%   \cs{graphics_log_list:} outputs it to the log file only. In both cases, only
 %   graphics loaded by \pkg{l3graphics} are listed.
 % \end{function}
 %
