--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -679,10 +679,10 @@
 %     \item[\texttt{array}] A space-separated list of values
 %     \item[\texttt{dict}] Key--value pairs in the form
 %       \texttt{/\meta{key} \meta{value}}
-%     \item[\texttt{fstream}] Two brace groups: \meta{content} and
-%       \meta{file name}
-%     \item[\texttt{stream}] Two brace groups: \meta{content} and
-%       \meta{additional attributes}
+%     \item[\texttt{fstream}] Two brace groups: \meta{file name} and
+%       \meta{content}
+%     \item[\texttt{stream}] Two brace groups: \meta{attributes (dictionary)}
+%       and \meta{content}
 %   \end{itemize}
 % \end{function}
 %
