Fix documentation of 'f' specifier
Mention the fact that if the first non-expandable token found during the
expansion is a <space token>, it is gobbled.

--- a/l3kernel/source3body.tex
+++ b/l3kernel/source3body.tex
@@ -168,9 +168,10 @@ following argument specifiers:
     precisely in non-\LuaTeX{} engines older than 2019.
   \item[\texttt{f}] The \texttt{f} specifier stands for \emph{full
     expansion}, and in contrast to \texttt{x} stops at the first
-    non-expandable item (reading the argument from left to right) without
-    trying to expand it. For example, when setting a token list
-    variable (a macro used for storage), the sequence
+    non-expandable token (reading the argument from left to right) without
+    trying to expand it. If this token is a \meta{space token}, it is gobbled,
+    and thus won't be part of the resulting argument. For example, when
+    setting a token list variable (a macro used for storage), the sequence
     \begin{verbatim}
       \tl_set:Nn \l_mya_tl { A }
       \tl_set:Nn \l_myb_tl { B }
