--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -167,8 +167,7 @@
 %   is carried out with no context-dependence (\emph{cf.}~\cs{tl_upper_case:n},
 %   \emph{etc.}) The \texttt{str} versions always generate \enquote{other}
 %   (category code $12$) characters, whilst the standard versions generate
-%   characters with the currently-active category code (\emph{i.e.}~as if
-%   the character had been read directly here).
+%   characters with the category code of the supplied \meta{char}.
 % \end{function}
 %
 % \begin{variable}[added = 2011-09-05]{\c_catcode_other_space_tl}
@@ -1559,11 +1558,12 @@
 %   }
 % \begin{macro}[EXP]{\@@_change_case:nNN}
 % \begin{macro}[EXP]{\@@_change_case:nN}
-% \begin{macro}[EXP]{\@@_change_case_multi:n, \@@_change_case_multi:v}
-% \begin{macro}[EXP]{\@@_change_case_multi:NNNw}
-% \begin{macro}[EXP]{\@@_change_case:NN}
+% \begin{macro}[EXP]{\@@_change_case_multi:nN, \@@_change_case_multi:vN}
+% \begin{macro}[EXP]{\@@_change_case_multi:NNNNw}
 % \begin{macro}[EXP]{\@@_change_case:NNN}
-% \begin{macro}[EXP]{\@@_change_case:N}
+% \begin{macro}[EXP]{\@@_change_case:NNNN}
+% \begin{macro}[EXP]{\@@_change_case:NN}
+% \begin{macro}[EXP]{\@@_change_case_catcode:N}
 % \begin{macro}[EXP]
 %   {
 %     \char_str_lower_case:N, \char_str_upper_case:N,
@@ -1594,8 +1594,8 @@
   {
     \tl_if_exist:cTF { c_@@_mixed_case_ \token_to_str:N #1 _tl }
       {
-        \@@_change_case_multi:v
-          { c_@@_mixed_case_ \token_to_str:N #1 _tl }
+        \@@_change_case_multi:vN
+          { c_@@_mixed_case_ \token_to_str:N #1 _tl } #1
       }
       { \char_upper_case:N #1 }
   }
@@ -1605,48 +1605,76 @@
   {
     \tl_if_exist:cTF { c_@@_ #1 _case_ \token_to_str:N #3 _tl }
       {
-        \@@_change_case_multi:v
-          { c_@@_ #1 _case_ \token_to_str:N #3 _tl }
+        \@@_change_case_multi:vN
+          { c_@@_ #1 _case_ \token_to_str:N #3 _tl } #3
       }
       { \exp_args:Nf \@@_change_case:nN { #2 { `#3 } } #3 }
   }
 \cs_new:Npn \@@_change_case:nN #1#2
   {
     \int_compare:nNnTF {#1} = 0
-      { \@@_change_case:N #2 }
-      { \char_generate:nn {#1} { \char_value_catcode:n {#1} } }
+      { #2 }
+      { \char_generate:nn {#1} { \@@_change_case_catcode:N #2 } }
   }
-\cs_new:Npn \@@_change_case_multi:n #1
-  { \@@_change_case_multi:NNNw #1 \q_no_value \q_no_value \q_stop }
-\cs_new:Npn \@@_change_case_multi:NNNw #1#2#3#4 \q_stop
+\cs_new:Npn \@@_change_case_multi:nN #1#2
+  { \@@_change_case_multi:NNNNw #2 #1 \q_no_value \q_no_value \q_stop }
+\cs_generate_variant:Nn \@@_change_case_multi:nN { v }
+\cs_new:Npn \@@_change_case_multi:NNNNw #1#2#3#4#5 \q_stop
   {
-    \quark_if_no_value:NTF #3
+    \quark_if_no_value:NTF #4
       {
-        \quark_if_no_value:NTF #2
-          { \@@_change_case:N #1 }
-          { \@@_change_case:NN #1#2 }
+        \quark_if_no_value:NTF #3
+          { \@@_change_case:NN #1 #2 }
+          { \@@_change_case:NNN #1 #2#3 }
       }
-      { \@@_change_case:NNN #1#2#3 }
-  }
-\cs_generate_variant:Nn \@@_change_case_multi:n { v }
-\cs_new:Npn \@@_change_case:NN #1#2
-  {
-    \exp_args:Nnf \use:nn
-      { \@@_change_case:N #1 }
-      { \@@_change_case:N #2 }
+      { \@@_change_case:NNNN #1 #2#3#4 }
   }
 \cs_new:Npn \@@_change_case:NNN #1#2#3
   {
-    \exp_args:Nnff \use:nnn
-      { \@@_change_case:N #1 }
-      { \@@_change_case:N #2 }
-      { \@@_change_case:N #3 }
+    \exp_args:Nnf \use:nn
+      { \@@_change_case:NN #1 #2 }
+      { \@@_change_case:NN #1 #3 }
   }
-\cs_new:Npn \@@_change_case:N #1
-  { \char_generate:nn { `#1 } { \char_value_catcode:n { `#1 } } }
-\cs_if_exist:NF \tex_Uchar:D
+\cs_new:Npn \@@_change_case:NNNN #1#2#3#4
   {
-    \cs_set_eq:NN \@@_change_case:nN \use_ii:nn
+    \exp_args:Nnff \use:nnn
+      { \@@_change_case:NN #1 #2 }
+      { \@@_change_case:NN #1 #3 }
+      { \@@_change_case:NN #1 #4 }
+  }
+\cs_new:Npn \@@_change_case:NN #1#2
+  { \char_generate:nn { `#2 } { \@@_change_case_catcode:N #1 } }
+\cs_new:Npn \@@_change_case_catcode:N #1
+  {
+    \if_catcode:w \exp_not:N #1 \c_math_toggle_token
+      3
+    \else:
+      \if_catcode:w \exp_not:N #1 \c_alignment_token
+        4
+      \else:
+        \if_catcode:w \exp_not:N #1 \c_math_superscript_token
+          7
+        \else:
+          \if_catcode:w \exp_not:N #1 \c_math_subscript_token
+            8
+          \else:
+            \if_catcode:w \exp_not:N #1 \c_space_token
+              10
+            \else:
+             \if_catcode:w \exp_not:N #1 \c_catcode_letter_token
+               11
+             \else:
+               \if_catcode:w \exp_not:N #1 \c_catcode_other_token
+                 12
+               \else:
+                 13
+               \fi:
+             \fi:
+            \fi:
+          \fi:
+        \fi:
+      \fi:
+    \fi:
   }
 %    \end{macrocode}
 %   Same story for the string version, except category code is easier
@@ -1682,6 +1710,7 @@
       { \tl_to_str:n {#2} }
   }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
