Use \luafunction or \luadef for \@@_if_eq:nn

--- a/l3kernel/l3bootstrap.dtx
+++ b/l3kernel/l3bootstrap.dtx
@@ -230,6 +230,9 @@
       local charcat_table = \number\ucharcat@table\space
       l3kernel.charcat_table = charcat_table
     }%
+    \expandafter\newluafunction\csname
+      c__str_cmp_func_int%
+    \endcsname
 %</package>
     \directlua{require("expl3")}%
 %    \end{macrocode}
