--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -314,6 +314,11 @@ local tex     = tex
 local unicode = unicode
 %    \end{macrocode}
 %
+%   Local copy of the Lua function table
+%    \begin{macrocode}
+local luafunctions = lua.get_functions_table()
+%    \end{macrocode}
+%
 %   Local copies of standard functions.
 %    \begin{macrocode}
 local abs        = math.abs
@@ -492,6 +497,9 @@ local function strcmp(A, B)
   end
 end
 l3kernel.strcmp = strcmp
+luafunctions[token.create'c__str_cmp_func_int'.mode] = function()
+  strcmp(token.scan_string(), token.scan_string())
+end
 %    \end{macrocode}
 % \end{macro}
 %
