--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1085,17 +1085,31 @@
    {
      \cs_set_eq:NN \lua_escape:e \tex_luaescapestring:D
      \cs_set_eq:NN \lua_now:e    \tex_directlua:D
-     \cs_set:Npn \@@_if_eq:nn #1#2
-       {
-          \lua_now:e
-            {
-              l3kernel.strcmp
-                (
-                  " \@@_escape:n {#1} " ,
-                  " \@@_escape:n {#2} "
-                )
-            }
-       }
+     \if_int_compare:w
+       \lua_now:e { tex.sprint(token~and~token.scan_string~and '1' or '0') }
+       = 0 \exp_stop_f:
+       \cs_set:Npn \@@_if_eq:nn #1#2
+         {
+            \lua_now:e
+              {
+                l3kernel.strcmp
+                  (
+                    " \@@_escape:n {#1} " ,
+                    " \@@_escape:n {#2} "
+                  )
+              }
+         }
+       \else:
+         \cs_if_exist:NTF \tex_luadef:D
+           {
+             \tex_luadef:D \@@_if_eq:nn \c_@@_cmp_func_int
+           } {
+             \cs_set:Npn \@@_if_eq:nn
+               {
+                 \tex_luafunction:D \c_@@_cmp_func_int
+               }
+           }
+       \fi:
      \cs_new:Npn \@@_escape:n #1
        {
          \lua_escape:e
