--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -858,9 +858,9 @@
 %   \item Function calls (\texttt{sin}, \texttt{ln}, \emph{etc}).
 %   \item Binary |**| and |^| (right associative).
 %   \item Unary |+|, |-|, |!|.
-%   \item Implicit multiplication by juxtaposition
-%     (\texttt{2pi}, \texttt{3(4+5)}, \emph{etc}).
-%   \item Binary |*| and |/|.
+%   \item Implicit multiplication by juxtaposition (\texttt{2pi})
+%     when neither factor is in parentheses.
+%   \item Binary |*| and |/|, implicit multiplication by juxtaposition with parentheses (for instance \texttt{3(4+5)}).
 %   \item Binary |+| and |-|.
 %   \item Comparisons |>=|, |!=|, |<?|, \emph{etc}.
 %   \item Logical \texttt{and}, denoted by |&&|.
@@ -869,8 +869,10 @@
 %   \item Comma (to build tuples).
 % \end{itemize}
 % The precedence of operations can be overridden using parentheses.
-% In particular, those precedences imply that
+% In particular, the precedence of juxtaposition implies that
 % \begin{align*}
+%   \mathtt{1/2pi} & = 1/(2\pi), \\
+%   \mathtt{1/2pi(pi+pi)} & = (2\pi)^{-1}(\pi+\pi) \simeq 1, \\
 %   \mathtt{sin 2pi} & = \sin(2)\pi \neq 0, \\
 %   \mathtt{2\char`\^2max(3,5)} & = 2^2 \max(3,5) = 20, \\
 %   \mathtt{1in/1cm} & = (1in)/(1cm) = 2.54 .
