Remove misleading text

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -649,8 +649,7 @@
 % \subsection{PDF Objects}
 %
 % Objects are used to provide a range of data structures in a PDF. At the
-% driver level, different PDF object types are declared separately. Objects
-% are only \emph{written} to the PDF when referenced.
+% driver level, different PDF object types are declared separately.
 %
 % \begin{function}{\driver_pdf_object_new:nn}
 %   \begin{syntax}
