\driver_pdf_object_write:nx

--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -125,7 +125,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\driver_pdf_object_write:nn}
+% \begin{macro}{\driver_pdf_object_write:nn, \driver_pdf_object_write:nx}
 % \begin{macro}
 %   {
 %     \@@_pdf_object_write_array:nn ,
@@ -156,6 +156,7 @@
       { @@_pdf_object_write_ \prop_item:Nn \g_@@_pdf_object_prop {#1} :nn }
       {#1} {#2}
   }
+\cs_generate_variant:Nn \driver_pdf_object_write:nn { nx }
 \cs_new_protected:Npn \@@_pdf_object_write_array:nn #1#2
   {
     \@@_pdfmark:x
@@ -1399,7 +1400,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\driver_pdf_object_write:nn}
+% \begin{macro}{\driver_pdf_object_write:nn,\driver_pdf_object_write:nx}
 % \begin{macro}[EXP]{\@@_exp_not_i:nn, \@@_exp_not_ii:nn}
 %   Writing the data needs a little information about the structure of the
 %   object.
@@ -1434,6 +1435,7 @@
     { \@@_tmp:w { \tex_pdfextension:D obj ~ } }
     { \@@_tmp:w { \tex_pdfobj:D } }
 \group_end:
+\cs_generate_variant:Nn \driver_pdf_object_write:nn { nx }
 \cs_new:Npn \@@_exp_not_i:nn #1#2 { \exp_not:n {#1} }
 \cs_new:Npn \@@_exp_not_ii:nn #1#2 { \exp_not:n {#2} }
 %    \end{macrocode}
@@ -1594,7 +1596,7 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\driver_pdf_object_write:nn}
+% \begin{macro}{\driver_pdf_object_write:nn, \driver_pdf_object_write:nx}
 % \begin{macro}{\@@_pdf_object_write:nnn}
 % \begin{macro}
 %   {
@@ -1611,6 +1613,7 @@
     \exp_args:Nx \@@_pdf_object_write:nnn
       { \prop_item:Nn \g_@@_pdf_object_prop {#1} } {#1} {#2}
   }
+\cs_generate_variant:Nn \driver_pdf_object_write:nn { nx }
 \cs_new_protected:Npn \@@_pdf_object_write:nnn #1#2#3
   { \use:c { @@_pdf_object_write_ #1 :nn } {#2} {#3} }
 \cs_new_protected:Npn \@@_pdf_object_write_array:nn #1#2
@@ -1881,12 +1884,13 @@
 %
 % \begin{macro}{\driver_pdf_object_new:nn}
 % \begin{macro}[EXP]{\driver_pdf_object_ref:n}
-% \begin{macro}{\driver_pdf_object_write:nn}
+% \begin{macro}{\driver_pdf_object_write:nn, , \driver_pdf_object_write:nx}
 %   All no-ops here.
 %    \begin{macrocode}
 \cs_new_protected:Npn \driver_pdf_object_new:nn #1#2 { }
 \cs_new:Npn \driver_pdf_object_ref:n #1 { }
 \cs_new_protected:Npn \driver_pdf_object_write:nn #1#2 { }
+\cs_new_protected:Npn \driver_pdf_object_write:nx #1#2 { }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
