\driver_pdf_object_now:nn

--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -154,31 +154,23 @@
       }
     \use:c
       { @@_pdf_object_write_ \prop_item:Nn \g_@@_pdf_object_prop {#1} :nn }
-      {#1} {#2}
+      { \driver_pdf_object_ref:n {#1} } {#2}
   }
 \cs_generate_variant:Nn \driver_pdf_object_write:nn { nx }
 \cs_new_protected:Npn \@@_pdf_object_write_array:nn #1#2
   {
     \@@_pdfmark:x
-      {
-        \driver_pdf_object_ref:n {#1}
-          [ ~ \exp_not:n {#2} ~ ] ~ /PUTINTERVAL
-      }
+      { #1 [ ~ \exp_not:n {#2} ~ ] ~ /PUTINTERVAL }
   }
 \cs_new_protected:Npn \@@_pdf_object_write_dict:nn #1#2
   {
     \@@_pdfmark:x
-      {
-        \driver_pdf_object_ref:n {#1}
-          << \exp_not:n {#2} >> /PUT
-      }
+      { #1 << \exp_not:n {#2} >> /PUT }
   }
 \cs_new_protected:Npn \@@_pdf_object_write_stream:nn #1#2
   {
     \exp_args:Nx
-      \@@_pdf_object_write_stream:nnn
-        { \driver_pdf_object_ref:n {#1} }
-        #2
+      \@@_pdf_object_write_stream:nnn {#1} #2
   }
 \cs_new_protected:Npn \@@_pdf_object_write_stream:nnn #1#2#3
   {
@@ -192,6 +184,33 @@
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\driver_pdf_object_now:nn, \driver_pdf_object_now:nx}
+%   No anonymous objects, so things are done manually.
+%    \begin{macrocode}
+\cs_new_protected:Npn \driver_pdf_object_write:nn #1#2
+  {
+    \int_gincr:N \g_@@_pdf_object_int
+    \@@_pdfmark:x
+      {
+        /_objdef ~ { driver.obj \int_use:N \g_@@_pdf_object_int }
+        /type
+        \str_case:nn
+          {#1}
+          {
+            { array }   { /array }
+            { dict }    { /dict }
+            { fstream } { /stream }
+            { stream }  { /stream }
+          }
+        /OBJ
+      }
+    \exp_args:Nnx \use:c { @@_pdf_object_write_ #1 :nn }
+      { { driver.obj \int_use:N \g_@@_pdf_object_int } } {#2}
+  }
+\cs_generate_variant:Nn \driver_pdf_object_write:nn { nx }
+%    \end{macrocode}
 % \end{macro}
 %
 % \subsubsection{Annotations}
@@ -1442,6 +1461,41 @@
 % \end{macro}
 % \end{macro}
 %
+% \begin{macro}{\driver_pdf_object_now:nn, \driver_pdf_object_now:nx}
+%   Much like writing, but direct creation.
+%    \begin{macrocode}
+\group_begin:
+  \cs_set_protected:Npn \@@_tmp:w #1
+    {
+      \cs_new_protected:Npn \driver_pdf_object_now:nn ##1##2
+        {
+          \tex_immediate:D #1
+            \str_case:nn
+              {##1}
+              {
+                { array } { { [ ~ \exp_not:n {##2} ~ ] } }
+                { dict }  { { << ~ \exp_not:n {##2} ~ >> } }
+                { fstream }
+                  {
+                    stream ~ attr ~ { \@@_exp_not_i:nn ##2 } ~
+                      file ~ { \@@_exp_not_ii:nn ##2 }
+                  }
+                { stream }
+                  {
+                    stream ~ attr ~ { \@@_exp_not_i:nn ##2 } ~ 
+                      { \@@_exp_not_ii:nn ##2 }
+                  }
+              }
+        }
+    }
+  \cs_if_exist:NTF \tex_pdfextension:D
+    { \@@_tmp:w { \tex_pdfextension:D obj ~ } }
+    { \@@_tmp:w { \tex_pdfobj:D } }
+\group_end:
+\cs_generate_variant:Nn \driver_pdf_object_now:nn { nx }
+%    \end{macrocode}
+% \end{macro}
+%
 % \subsubsection{Structure}
 %
 % \begin{macro}{\driver_pdf_compresslevel:n}
@@ -1615,22 +1669,19 @@
   }
 \cs_generate_variant:Nn \driver_pdf_object_write:nn { nx }
 \cs_new_protected:Npn \@@_pdf_object_write:nnn #1#2#3
-  { \use:c { @@_pdf_object_write_ #1 :nn } {#2} {#3} }
+  {
+    \use:c { @@_pdf_object_write_ #1 :nn }
+      { \driver_pdf_object_ref:n {#2} } {#3}
+  }
 \cs_new_protected:Npn \@@_pdf_object_write_array:nn #1#2
   {
     \@@_pdf:x
-      {
-        obj ~ \driver_pdf_object_ref:n {#1} ~
-          [ ~ \exp_not:n {#2} ~ ]
-      }
+      { obj ~ #1 ~ [ ~ \exp_not:n {#2} ~ ] }
   }
 \cs_new_protected:Npn \@@_pdf_object_write_dict:nn #1#2
   {
     \@@_pdf:x
-      {
-        obj ~ \driver_pdf_object_ref:n {#1} ~
-          << ~ \exp_not:n {#2} ~ >>
-      }
+      { obj ~ #1 ~ << ~ \exp_not:n {#2} ~ >> }
   }
 \cs_new_protected:Npn \@@_pdf_object_write_fstream:nn #1#2
   { \@@_pdf_object_write_stream:nnnn { f } {#1} #2 }
@@ -1640,15 +1691,29 @@
   {
     \@@_pdf:x
       {
-        #1 stream ~ \driver_pdf_object_ref:n {#2} ~
+        #1 stream ~ #2 ~
           ( \exp_not:n {#4} ) ~ << \exp_not:n {#3} >>
-        
       }
   }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
 % \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\driver_pdf_object_now:nn, \driver_pdf_object_now:nx}
+%   No anonymous objects with \texttt{dvipdfmx} so we have to give an
+%   object name.
+%    \begin{macrocode}
+\cs_new_protected:Npn \driver_pdf_object_now:nn #1#2
+  {
+    \int_gincr:N \g_@@_pdf_object_int
+    \exp_args:Nnx \use:c { @@_pdf_object_write_ #1 :nn }
+      { @driver.obj \int_use:N \g_@@_pdf_object_int }
+      {#2}
+  }
+\cs_generate_variant:Nn \driver_pdf_object_now:nn { nx }
+%    \end{macrocode}
 % \end{macro}
 %
 % \subsubsection{Annotations}
@@ -1885,13 +1950,17 @@
 % \begin{macro}{\driver_pdf_object_new:nn}
 % \begin{macro}[EXP]{\driver_pdf_object_ref:n}
 % \begin{macro}{\driver_pdf_object_write:nn, , \driver_pdf_object_write:nx}
+% \begin{macro}{\driver_pdf_object_now:nn, , \driver_pdf_object_now:nx}
 %   All no-ops here.
 %    \begin{macrocode}
 \cs_new_protected:Npn \driver_pdf_object_new:nn #1#2 { }
 \cs_new:Npn \driver_pdf_object_ref:n #1 { }
 \cs_new_protected:Npn \driver_pdf_object_write:nn #1#2 { }
 \cs_new_protected:Npn \driver_pdf_object_write:nx #1#2 { }
+\cs_new_protected:Npn \driver_pdf_object_now:nn #1#2 { }
+\cs_new_protected:Npn \driver_pdf_object_now:nx #1#2 { }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
