--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -685,6 +685,28 @@
 %   \end{itemize}
 % \end{function}
 %
+% \begin{function}{\driver_pdf_object_now:nn, \driver_pdf_object_write:nx}
+%   \begin{syntax}
+%     \cs{driver_pdf_object_now:nn} \Arg{type} \Arg{data}
+%   \end{syntax}
+%   Creates an anonymous object of \meta{type} and writes the \meta{data} 
+%   content immediately. Depending on the
+%   \meta{type} declared for the object, the format required for the
+%   \meta{data} will vary
+%   \begin{itemize}
+%     \item[\texttt{array}] A space-separated list of values
+%     \item[\texttt{dict}] Key--value pairs in the form
+%       \texttt{/\meta{key} \meta{value}}
+%     \item[\texttt{fstream}] Two brace groups: \meta{file name} and
+%       \meta{content}
+%     \item[\texttt{stream}] Two brace groups: \meta{attributes (dictionary)}
+%       and \meta{content}
+%   \end{itemize}
+%   Conceptually, this combines \cs{driver_pdf_object_new:nn} and
+%   \cs{driver_pdf_object_write:nn} for cases where the object must be written
+%   but is not referred to separately.
+% \end{function}
+%
 % \subsection{PDF structure}
 %
 % \begin{function}{\driver_pdf_compresslevel:n}
