--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -189,7 +189,7 @@
 % \begin{macro}{\driver_pdf_object_now:nn, \driver_pdf_object_now:nx}
 %   No anonymous objects, so things are done manually.
 %    \begin{macrocode}
-\cs_new_protected:Npn \driver_pdf_object_write:nn #1#2
+\cs_new_protected:Npn \driver_pdf_object_now:nn #1#2
   {
     \int_gincr:N \g_@@_pdf_object_int
     \@@_pdfmark:x
@@ -209,7 +209,7 @@
     \exp_args:Nnx \use:c { @@_pdf_object_write_ #1 :nn }
       { { driver.obj \int_use:N \g_@@_pdf_object_int } } {#2}
   }
-\cs_generate_variant:Nn \driver_pdf_object_write:nn { nx }
+\cs_generate_variant:Nn \driver_pdf_object_now:nn { nx }
 %    \end{macrocode}
 % \end{macro}
 %
