--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -535,6 +535,13 @@
 %   and \meta{depth} and featuring the \meta{dictionary}.
 % \end{function}
 %
+% \begin{function}[EXP]{\driver_pdf_annotation_last:}
+%   \begin{syntax}
+%     \cs{driver_pdf_annotation_last:}
+%   \end{syntax}
+%   Expands to the object reference of the last annotation.
+% \end{function}
+%
 % \begin{function}[added = 2019-04-17, updated = 2019-05-03]
 %   {
 %     \driver_pdf_link_begin_goto:nnw,
