Missing dvipdfmx function

--- a/l3kernel/l3drivers-pdf.dtx
+++ b/l3kernel/l3drivers-pdf.dtx
@@ -1780,6 +1780,13 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}{\driver_pdf_annotation_last:}
+%    \begin{macrocode}
+\cs_new:Npn \driver_pdf_annotation_last:
+ { @driver.obj \int_use:N \g_@@_pdf_annotation_int }
+%    \end{macrocode}
+% \end{macro}
+%
 % \begin{macro}
 %   {\driver_pdf_link_begin_goto:nnw, \driver_pdf_link_begin_user:nnw}
 % \begin{macro}{\@@_pdf_link_begin:n}
